traversal.snake.Snake.scala.error
Erreur de compilation :
Snake:16: error: type mismatch;
 found   : Unit
 required: Boolean
      gauche()
            ^Snake:11: error: type mismatch;
 found   : Unit
 required: Boolean
    if (getDirection() == Direction.OUEST) {
    ^Snake:3: error: type mismatch;
 found   : Unit
 required: Boolean
  if (estFaceMur==true) {
  ^